Fix stretching on clicking on element

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -245,6 +245,7 @@ body {
 
             .questions__container {
                 margin-top: 12px;
+                height: 55%;
                 
             }
         }
